# fastapi_blog

./: .dockerignore  .env.template  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scripts.py
alembic/: env.py
alembic/versions/: 2d4090af011d_create_tables.py  63557c0efae2_create_tables.py  6749ab498aba_create_tables.py  96d5dc030ee8_initial_migration.py
app/: __init__.py  app.py  events.py  models.py
app/routes/: __init__.py  medias.py  posts.py  tweets.py  users.py  utils.py
app/schemas/: __init__.py  post_schema.py  tweet_schema.py  user_schema.py
app/services/: __init__.py  decorators.py  media_service.py  tweet_service.py  user_service.py  utils.py  yandex.py
config/: config.py  logging_config.py
tests/: conftest.py  fastapi_blog.postman_collection.json  test_media.py  test_root.py  test_tweet.py  test_user.py  test_users.py
