[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei_rodimkin",email = "alexeyrodimkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohappyeyeballs (>=2.6.1,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "billiard (>=4.2.1,<5.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "frozenlist (>=1.5.0,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "kombu (>=5.5.2,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "multidict (>=6.2.0)", # 6.3.2 Referred (memory leaks)
    "propcache (>=0.3.1,<0.4.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-core (>=2.33.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "requests (>=2.32.3,<3.0.0)",
    "redis (>=5.2.1)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "typing-inspection (>=0.4.0,<0.5.0)",
    "typing-extensions (>=4.13.1,<5.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "vine (>=5.1.0,<6.0.0)",
    "yarl (>=1.19.0,<2.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
asyncio = "^3.4.3"
mypy = "^1.15.0"
mypy-extensions = "^1.0.0"
flake8 = "^7.2.0"
pyflakes = "^3.3.2"
pycodestyle = "^2.13.0"
black = "^25.1.0"
isort = "^6.0.1"
pathspec = "^0.12.1"
platformdirs = "^4.3.7"
iniconfig = "^2.1.0"
pluggy = "^1.5.0"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
prompt-toolkit = "^3.0.50"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = false    # Auto -administration of quotes

[tool.isort]
profile = "black"  # Compatibility with Black
line_length = 99   # Should match Black
known_first_party = ["app", "config", "tests"]  # My packages
src_paths = ["app", "config", "tests"]  # Work here

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Warns if the function returns ANY, not a specific type.
warn_unused_configs = true  # Warns if there are unused options in the config.
disallow_untyped_defs = false  # It requires that all functions have obvious type annotations (otherwise - error).
ignore_missing_imports = true  # Disaches errors on the missing external dependencies, for example, do not have .pyi-type.
exclude = "alembic/|logs/|venv/|.venv/|env/|.env/|__pycache__/|uploads/|migrations/"  # Says mypy, which folders do not check


[tool.poetry.scripts]
lint = "scripts:lint"